finished the game

--- a/index.html
+++ b/index.html
@@ -13,16 +13,28 @@
       <div class="playerBox">
         <div class="player1">
           <p>Player 1</p>
-          <img src="./images/dice1.svg" width="100px" height="100px" />
+          <img
+            src="./images/dice1.svg"
+            width="100px"
+            height="100px"
+            id="imgP1"
+          />
         </div>
         <div class="player2">
           <p>Player 2</p>
-          <img src="./images/dice1.svg" width="100px" height="100px" />
+          <img
+            src="./images/dice1.svg"
+            width="100px"
+            height="100px"
+            id="imgP2"
+          />
         </div>
       </div>
       <footer>
         <p>Developer by Marcos - 2024</p>
       </footer>
+
+      <script src="./js/index.js"></script>
     </div>
   </body>
 </html>
